--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,16 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!--description-->
 		<div>
+			<h1>Ma description</h1>
 			<p>my name is Sun</p>
+
+		</div>
+		<!--reconpense-->
+		<div>
+			<h1>Me reconpense</h1>
+			<p>en construction ...</p>
 
 		</div>
 </body></html>
