ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -26,6 +26,11 @@
 		<div>
 			<h1>Me reconpense</h1>
 			<p>en construction ...</p>
-
 		</div>
+		<!--mon gist-->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/soleilrakotonirina/7360dcda34f139422e375b707047bb34.js"></script></p>
+		</div>
+
 </body></html>
