--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
 		<!--reconpense-->
 		<div>
 			<h1>Me reconpense</h1>
-			<p> <img src="images/medal_bronze.png" alt="" srcset=""></p>
+			<p> <img src="images/medal_bronze.png" alt="" srcset=""> <img src="images/medal_silver.png" srcset=""></p>
 		</div>
 		<!--mon gist-->
 		<div>
